example of sprites

--- a/templates/event/event.html
+++ b/templates/event/event.html
@@ -13,6 +13,35 @@
 	<title>Event</title>
 </head>
 <body>
-	<h1>Event is Works</h1>
+	<h1>Example of sprites</h1>
+	
+	<!-- con sprites -->
+	<figure class="image-sprites">
+	</figure>
+
+	<figure class="image-sprites" style="background-position: 100px;">
+	</figure>
+
+	<figure class="image-sprites" style="background-position: 150px;">
+	</figure>
+
+	<figure class="image-sprites" style="background-position: 200px;">
+	</figure>
+
+	<br>
+
+	<!-- sin sprites
+	<figure class="image" style="background-image: url('../../assets/images/inicio.png');">
+	</figure>
+
+	<figure class="image" style="background-image: url('../../assets/images/empleos.png');">
+	</figure>
+
+	<figure class="image" style="background-image: url('../../assets/images/ofertas.png');">
+	</figure>
+
+	<figure class="image" style="background-image: url('../../assets/images/eventos.png');">
+	</figure>
+	-->
 </body>
 </html>
