--- a/templates/event/event.html
+++ b/templates/event/event.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="../../assets/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../../assets/css/fonts.css">
-	<link rel="stylesheet" type="text/css" href="../../assets/css/ionicons.min.css">
 
-	<!-- style for this template -->
-	<link rel="stylesheet" type="text/css" href="./event.css">
-	<!-- style for components -->
-	
-	<title>Event</title>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/fonts.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/ionicons.min.css">
+
+    <!-- style for this template -->
+    <link rel="stylesheet" type="text/css" href="./event.css">
+    <!-- style for components -->
+
+    <title>Event</title>
 </head>
+
 <body>
-	<h1>Event is Works</h1>
+    <div class="container-fluid">
+        <div class="row profile-container">
+            <div class="col-md-offset-2 col-md-8 col-xs-12 information-container">
+                <figure>
+                    <img src="../../assets/images/logotodopique.jpg" alt="">
+                </figure>
+                <figure>
+                    <img src="../../assets/images/maxresdefault.jpg" alt="">
+                </figure>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
