--- a/templates/event/event.html
+++ b/templates/event/event.html
@@ -17,6 +17,14 @@
 <body>
     <div class="row reset-margin reset-padding">
         <div class="col-xs-12 col-md-7 container-principal reset-margin reset-padding">
+            <div class="logo1">
+                <img src=" ../../assets/images/logotodopique.jpg" alt="">
+            </div>
+            <div class="info-business">
+                <span class="font-title font-block color-white">A TODO PIQUE CHUQUISACA</span>
+                <span class="color-white">imagen</span>
+                <span class="color-white">RESTAURANTE</span>
+            </div>
             <div class="portada">
                 <div class="information-business">
                     <div class="container1 font-center" style="height: auto;">
@@ -55,7 +63,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container1" style="height: 200px; margin-top: 15px;">
+            <div class="container1 reset-both">
                 <div>
                     <div class="container-small bg-white">
                         <div class="genial genial-preview" data-genial='{"press":"0","number_like":"101"}' style="font-size: 65px; margin:0 auto;">
@@ -81,7 +89,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container-xmidle bg-white padding">
+                    <div class="container-xmidle bg-white padding" style="min-height: 87px;">
                         <span class="font-title color-lightOrange font-block">Dirección:</span>
                         <span class="font-title font-block color-gray1">Av. Jaime Mendoza #324</span>
                     </div>
@@ -141,6 +149,57 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="col-md-3 prueba24 ">
+            <div class="prueba34">
+                <div class="container-small2"></div>
+                <div class="container-small2" style="float: right;">
+                    <span class="color-white font-block" style="font-size: 20px;margin-top: 18px;">Registrarse</span>
+                </div>
+            </div>
+            <div class="container1 bg-white" style="margin: 0; height: 80px;">
+                <div class="container-xmidle pull-right" style="height: 20px;">
+                    <span class="color-gray1 font-block font-title" style="margin-top: 25px;">
+                         Volver a Busqueda
+                    </span>
+                </div>
+                <div class="container-small" style="height: 30px;"></div>
+            </div>
+            <div class="container1 bg-gray font-center" style="height: 60px;padding: 15px; margin: 0;">
+                <span class="font-title font-block pull-left">Abierto en este momento </span>
+                <i class="ion ion-ios-clock pull-right" style="font-size: 30px; "></i>
+            </div>
+            <div class="container1" style="padding: 16px; margin: 0;">
+                <div class="container1 menu-options bg-gray" style="margin:5px;" >
+                    <span class="font-title">PERFIL</span>
+                    <div class="logo-options"></div>
+                </div>
+                <div class="container1 menu-options  bg-gray">
+                    <span class="font-title">COMENTARIOS</span>
+                    <div class="logo-options"></div>
+                </div>
+                <div class="container1" style="height: 50px;margin-top: 30px; border-bottom:1px solid #dfdfdf;">
+                    <span class="font-midle color-lightOrange">Más</span>
+                    <span class="font-midle color-turqueza">   de</span>
+                    <span class="font-midle color-fucsia">  nosotros...</span>
+                </div>
+                <div class="container1 menu-options  bg-gray">
+                    <span class="font-title">MIS EVENTOS</span>
+                    <div class="logo-options"></div>
+                </div>
+                <div class="container1 menu-options  bg-gray">
+                    <span class="font-title">MIS EMPLEOS</span>
+                    <div class="logo-options"></div>
+                </div>
+                <div class="container1 menu-options  bg-gray">
+                    <span class="font-title">MIS OFERTAS</span>
+                    <div class="logo-options"></div>
+                </div>
+                <div class="container1 font-center color-gray" style="height: 25px;">
+                    <span class="font-title">©Openred - gooMovil - 2018</span>
+                </div>
+            </div>
+            <!-- <div class="container1 bg-gray" style="margin-top: 12px;height: 120px;"></div> -->
         </div>
     </div>
 </body>
