Arreglos en Event(Profile)

--- a/templates/event/event.css
+++ b/templates/event/event.css
@@ -90,6 +90,9 @@ a:hover {
     font-size: 22px;
     margin-top: 2px;
 }
+.font-genial{
+    font-size: 52px;
+}
 
 .icon-share {
     margin-left: 10%;
@@ -111,6 +114,10 @@ a:hover {
 .color-orange {
     color: #f19733;
 }
+.color-whiteO {
+    color: #ffffff94;
+}
+
 
 .color-lightOrange {
     color: #f8c864;
@@ -291,7 +298,7 @@ a:hover {
 }
 
 .padding {
-    padding: 15px 17px;
+    padding: 10px 50px;
 }
 
 .container-extra {
@@ -432,6 +439,9 @@ a:hover {
 }
 
 @media (min-width: 992px) {
+    .font-genial{
+    font-size: 46px;
+}
     .menu-profile {
         display: none;
     }
@@ -571,7 +581,7 @@ a:hover {
         margin-right: 15%;
     }
     .prueba34 {
-        height: 100px;
+        height: 87px;
     }
     .container-small2 {
         height: 80px;
