--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"> 
 	<link rel="stylesheet" type="text/css" href="../../assets/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/ionicons.min.css">
@@ -10,10 +10,19 @@
 	<!-- style for this template -->
 	<link rel="stylesheet" type="text/css" href="./profile.css">
 	<!-- style for components -->
-	
 	<title>Profile</title>
 </head>
 <body>
-	<h1>Profile is Works</h1>
+	<div class="row">
+		<div class="col-xs-12 col-md-8 col-md-offset-2 prueba">
+			<div class="row">
+				<div class="col-xs-12 col-md-7  prueba1">
+					<div class="portada"></div>
+				</div>
+				<div class="hidden-xs hidden-sm col-md-5  prueba3"></div>
+			</div>
+		</div>
+	</div>
+
 </body>
 </html>
