--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -6,14 +6,57 @@
 	<link rel="stylesheet" type="text/css" href="../../assets/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/ionicons.min.css">
+	<link rel="stylesheet" href="../../assets/css/icomoon.css">
 
 	<!-- style for this template -->
 	<link rel="stylesheet" type="text/css" href="./search.css">
 	<!-- style for components -->
-	
+
 	<title>Search</title>
 </head>
 <body>
-	<h1>Search is Works</h1>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12">
+				<!-- Item -->
+				<div class="Item">
+					<div class="Item-picture">
+						<figure class="Item-picture-image"
+							style="background-image:url(../../assets/images/profile.png)"
+						></figure>
+					</div>
+					<div class="Item-info">
+						<h2 class="Item-info-name">
+							Pollos Kikys
+						</h2>
+						<h5 class="Item-info-category">
+							Restaurant - Santa Cruz
+						</h5>
+						<p class="Item-info-description">
+							Pollos a la leña siempre con doble arroz,
+							Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
+						</p>
+						<adress class="Item-info-address">
+							<strong>Direccion:</strong>
+							Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
+						</adress>
+
+						<div class="Item-info-contact">
+							<a href="" class="Item-info-contact-cellphone">
+								<span class="icon-phone"></span>70228183
+							</a>
+							<a href="" class="Item-info-contact-gps">
+								<span class="icon-location2"></span>Ver Mapa
+							</a>
+							<a href="" class="Item-info-contact-more">
+								<span class="icon-arrow-right2"></span>Ver Mas...
+							</a>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
