--- a/templates/search/search.css
+++ b/templates/search/search.css
@@ -2,6 +2,53 @@
 body{
   background: #e9eaeb;
 }
+/********************************************************
+                        LAYOUTS
+********************************************************/
+.layoutSearch{
+  display: block;
+  width: 960px;
+  margin: 0 auto;
+  background: red;
+  white-space: nowrap;
+  word-spacing: -4px;
+
+}
+.layoutItem,
+.layoutFilter{
+  vertical-align: middle;
+  word-spacing: normal;
+  letter-spacing: normal;
+  white-space: normal;
+  -webkit-box-sizing: content-box!important;
+  box-sizing: content-box!important;
+}
+.layoutItem{
+  display: inline-block;
+  width: 600px;
+  background: yellow;
+}
+.layoutFilter{
+  display: inline-block;
+  position: relative;
+  width: 360px;
+  height: 150px;
+  background: green;
+}
+/********************************************************
+                    FILTER COMPONENT
+********************************************************/
+
+.Filter{
+  width: 350px;
+  height: 150px;
+  position: fixed;
+  background: #2d2d2d;
+}
+
+/********************************************************
+                    ITEM COMPONENT
+********************************************************/
 .Item{
   display: block;
   position: relative;
@@ -14,7 +61,7 @@ body{
   border-radius: 5px;
   border: 1px solid;
   border-color: #e5e6e9 #dfe0e4 #d0d1d5;
-  margin: 10px;
+  margin: 0 auto;
 }
 .Item h2, .Item h5{
   margin: 0;
@@ -40,6 +87,18 @@ body{
   background-color:#e9e9e9;
   background-position: center;
   background-size: cover;
+}
+.Item-share a{
+  text-decoration: none;
+  color: #ffffff;
+}
+.Item-share{
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  background: #000000;
+  border-radius: 50%;
+  padding: 6px 9px;
 }
 .Item-info{
   padding: 10px 20px 10px 20px;
@@ -81,10 +140,15 @@ body{
 .Item-info-contact a{
   text-decoration: none;
   color: #000;
+  font-size: 12px;
 }
 .Item-info-contact span{
   font-size: 16px;
   vertical-align: middle;
+}
+.Item-info-contact i{
+  display: inline-block;
+  font-style: normal;
 }
 .Item-info-contact-cellphone span{
   color:#33cc66;
@@ -100,4 +164,72 @@ body{
   color:#4c8fda;
   margin-left: 8px!important;
   margin-right: 10px;
+}
+
+/*
+    Mobile Support
+*/
+@media (max-width:768px) {
+  .Item{
+    width: 400px;
+  }
+  .Item-picture{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-left: 15px;
+  }
+  .Item-info{
+    width: 245px;
+  }
+  .Item-info-contact-cellphone span,
+  .Item-info-contact-gps span,
+  .Item-info-contact-more span{
+    margin-right: 0px;
+  }
+}
+@media (max-width:420px) {
+  .Item{
+    width: 100%;
+    overflow: auto;
+    padding: 10px;
+  }
+  .Item-picture{
+    display: block;
+    position: absolute;
+    left: 25px;
+    margin: 0 auto;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  .Item-info{
+    display: block;
+    width: initial;
+    margin: 0px 20px;
+    padding: 0;
+  }
+  .Item-info-name, .Item-info-category{
+    margin-left: 56px!important;
+  }
+  .Item-info-name{
+    margin-top: 5px!important;
+  }
+  .Item-info-description{
+    margin: 20px 0px 4px 0px;
+  }
+  .Item-info-contact{
+    text-align: center;
+    margin: 15px 0px;
+  }
+  .Item-info-contact i{
+    display: none;
+  }
+  .Item-info-contact span{
+    background: #e9eaeb;
+    padding: 10px;
+    border-radius: 50%;
+  }
 }
