--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -18,10 +18,10 @@
   <div class="row reset-margin">
     <div class="col-md-12 reset-padding">
       <div class="row reset-margin">
-        <div class="col-md-10 col-md-offset-1 reset-padding">
+        <div class="col-md-10 col-md-offset-1 reset-margin1">
           <div class="container-profile">
             <div class="container-information">
-              <div class="Portada">
+              <div class="Portada text-center">
                 <div class="portada-gradient">
                   <div class="portada-logo"></div>
                   <span class="font-big font-block">TODO PIQUE</span>
@@ -105,11 +105,11 @@
               <div class="container-gps"></div>
               <div class="container-picture">
                 <div class="container-flecha pull-left">
-                  <span class="icon-flecha ion-arrow-left-c"></span>
+                  <span class="icon-flecha ion-arrow-left-c pull-right"></span>
                 </div>
                 <div class="container-picture-image"></div>
                 <div class="container-flecha pull-right">
-                  <span class="icon-flecha ion-arrow-right-c"></span>
+                  <span class="icon-flecha ion-arrow-right-c "></span>
                 </div>
               </div>
             </div>
