--- a/templates/profile/profile.css
+++ b/templates/profile/profile.css
@@ -61,8 +61,8 @@ body {
 
 .container-profile {
   position: relative;
-  height:auto;
-  text-align: center;
+  height: auto;
+  margin: 0 auto;
 }
 
 .container-information {
@@ -79,6 +79,7 @@ body {
 .container-menu1 {
   width: 100%;
   height: 100px;
+  text-align: center;
 }
 
 .container-small {
@@ -313,9 +314,16 @@ body {
   }
 }
 
-@media (min-width:992px) {
-  .font-general{
-    font-size: 12px;
+@media (min-width:960px) {
+  .reset-margin1{
+    position: relative;
+    padding: 0;
+    margin: 0 auto;
+    width: 960px;
+    float: none;
+  }
+  .font-general {
+    font-size: 14px;
   }
   .reset-padding {
     padding: 0px 15px;
@@ -325,19 +333,22 @@ body {
   }
   .container-profile {
     padding: 20px;
+    width: 960px;
   }
   .container-information {
-    width: 60%;
+    width:600px;
     margin-top: 120px;
   }
   .container-menu {
     display: inline-block;
-    width: 30%;
+    width: 360px;
     height: auto;
     background: white;
     margin-left: 20px;
     border-radius: 7px;
     color: #707175;
+    position:fixed;
+
   }
   .more-information {
     width: 90%;
@@ -371,7 +382,7 @@ body {
   .container-menu-search span {
     float: left;
     margin: 15px;
-    color:#707175 !important;
+    color: #707175 !important;
   }
   .container-menu-search .container-small {
     border-left: 0;
@@ -394,7 +405,7 @@ body {
     color: white;
     padding: 5px;
   }
-  .opciones span{
+  .opciones span {
     color: #707175;
   }
   .container-menu1 {
@@ -409,7 +420,7 @@ body {
   .portada-logo {
     margin: 0;
     position: absolute;
-    left: 120px;
+    left: 60px;
     border-radius: 0;
     width: 150px;
     top: 100px;
