--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -163,7 +163,7 @@
                   </div>
                 </div>
               </div>
-              <div class="container-normal text-center">
+              <div class="container-normal text-center" style="border-radius:0px 0px 7px 7px;">
                 <span class="font-general"  style="color:#707175 !important;">©Openred - gooMovil - 2018</span>
               </div>
             </div>
